# haskell-ssg

./: .gitignore  Makefile  README.md  haskell-ssg.cabal
app/: Building.hs  ErrorTypes.hs  File.hs  Files.hs  Main.hs  Opts.hs  Parsing.hs  Server.hs
doc/: documentazione.tm
src/: Document.hs  Layout.hs  Macro.hs  Parser.hs  Server.hs  ToHTML.hs  ToHtml.hs
src/Document/: Internal.hs
src/Macro/: Internal.hs
src/Parser/: Env.hs  Internal.hs
test/: DocumentSpec.hs  MacroSpec.hs  ParserSpec.hs  Spec.hs
