cabal-version:      2.4
name:               haskell-ssg
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Beretta Michele
                  , Crippa Bianca
                  , Toure Pape Alpha

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: 

library
    exposed-modules:  Document
                    , Macro
                    , Macro.Internal
                    , Parser
                    , Parser.Internal
                    , ToHTML
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , megaparsec
                    , mtl
                    , parser-combinators
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable haskell-ssg
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Files
                    , Server

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
    build-depends:    base ^>=4.14.3.0
                    , directory
                    , filepath
                    , haskell-ssg
                    , megaparsec
                    , scotty
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite haskell-ssg-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    ParserSpec
                    , MacroSpec
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base ^>=4.14.3.0
                    , haskell-ssg
                    , hspec
                    , hspec-megaparsec
                    , megaparsec
    default-language: Haskell2010
    default-extensions: OverloadedStrings