cabal-version:      2.4
name:               haskell-ssg
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A static site generator written in Haskell

-- A longer description of the package.
description:
    Haskell SSG is a static site generator written in Haskell. It defines its own language, inspired by
    LISP syntax, that strives to be minimal and lightweight. It also supports arbitrary macro expansion.

author:             Beretta Michele
                  , Crippa Bianca
                  , Toure Pape Alpha

library
    ghc-options:      -Wall -Werror -O2
    exposed-modules:  Document
                    , Document.Internal
                    , Macro
                    , Macro.Internal
                    , Parser
                    , Parser.Env
                    , Parser.Internal
                    , ToHtml
    build-depends:    base ^>=4.16.1.0
                    , containers
                    , megaparsec ^>=9.2.0
                    , mtl
                    , parser-combinators ^>=1.3.0
                    , text
                    , blaze-html ^>=0.9.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , LambdaCase

executable haskell-ssg
    main-is:          Main.hs
    other-modules:    Files
                    , Server
                    , Opts
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O2
    build-depends:    base ^>=4.16.1.0
                    , directory
                    , filepath
                    , haskell-ssg
                    , mtl
                    , optparse-applicative ^>=0.17.0.0
                    , scotty ^>=0.12
                    , text
                    , data-default-class
                    , warp
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , LambdaCase

test-suite haskell-ssg-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    ParserSpec
                    , MacroSpec
                    , DocumentSpec
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base ^>=4.16.1.0
                    , haskell-ssg
                    , hspec
                    , hspec-megaparsec ^>=2.2.0
                    , megaparsec ^>=9.2.0
                    , text
    default-language: Haskell2010
    default-extensions: OverloadedStrings
